zeit.content.dynamicfolder changes
==================================


1.0.2 (unreleased)
------------------

- Nothing changed yet.


1.0.1 (2015-06-09)
------------------

- Make text of content nodes available in template via the key `text`.


1.0.0 (2015-05-18)
------------------

- Initial release.